Add `Server` validation webhook (#387)
* Handle deletion of resources

* Capitalization of Info Comments

* force delete if the server is left in maintenance

* Fix updating logic for all bios/bmc webhook

* Simplify update logic

* Change to annotation from finalizers

* allow force delete in failed state

* Add annotation to force delete on webhook

* Optimize delete logic

* Add shouldDelete function

* simplyfy if logic

--- a/config/webhook/manifests.yaml
+++ b/config/webhook/manifests.yaml
@@ -108,3 +108,22 @@ webhooks:
     resources:
     - endpoints
   sideEffects: None
+- admissionReviewVersions:
+  - v1
+  clientConfig:
+    service:
+      name: webhook-service
+      namespace: system
+      path: /validate-metal-ironcore-dev-v1alpha1-server
+  failurePolicy: Fail
+  name: vserver-v1alpha1.kb.io
+  rules:
+  - apiGroups:
+    - metal.ironcore.dev
+    apiVersions:
+    - v1alpha1
+    operations:
+    - DELETE
+    resources:
+    - servers
+  sideEffects: None
