--- a/config/crd/bases/metal.ironcore.dev_biosversionsets.yaml
+++ b/config/crd/bases/metal.ironcore.dev_biosversionsets.yaml
@@ -15,7 +15,7 @@ spec:
   scope: Cluster
   versions:
   - additionalPrinterColumns:
-    - jsonPath: .spec.version
+    - jsonPath: .spec.biosVersionTemplate.version
       name: BIOSVersion
       type: string
     - jsonPath: .status.totalServers
@@ -61,35 +61,50 @@ spec:
           spec:
             description: BIOSVersionSetSpec defines the desired state of BIOSVersionSet.
             properties:
-              image:
-                description: details regarding the image to use to upgrade to given
-                  BIOS version
+              biosVersionTemplate:
+                description: BiosVersionTemplate defines the template for the BIOSversion
+                  Resource to be applied to the servers.
                 properties:
-                  URI:
-                    description: The URI of the software image to update/install."
-                    type: string
-                  secretRef:
-                    description: |-
-                      ImageSecretRef is a reference to the Kubernetes Secret (of type SecretTypeBasicAuth) object that contains the credentials
-                      to access the ImageURI. This secret includes sensitive information such as usernames and passwords.
+                  image:
+                    description: details regarding the image to use to upgrade to
+                      given BIOS version
                     properties:
-                      name:
-                        default: ""
-                        description: |-
-                          Name of the referent.
-                          This field is effectively required, but due to backwards compatibility is
-                          allowed to be empty. Instances of this type with an empty value here are
-                          almost certainly wrong.
-                          More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+                      URI:
+                        description: The URI of the software image to update/install."
                         type: string
+                      secretRef:
+                        description: |-
+                          ImageSecretRef is a reference to the Kubernetes Secret (of type SecretTypeBasicAuth) object that contains the credentials
+                          to access the ImageURI. This secret includes sensitive information such as usernames and passwords.
+                        properties:
+                          name:
+                            default: ""
+                            description: |-
+                              Name of the referent.
+                              This field is effectively required, but due to backwards compatibility is
+                              allowed to be empty. Instances of this type with an empty value here are
+                              almost certainly wrong.
+                              More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+                            type: string
+                        type: object
+                        x-kubernetes-map-type: atomic
+                      transferProtocol:
+                        description: The network protocol that the server's update
+                          service uses to retrieve 'ImageURI'
+                        type: string
+                    required:
+                    - URI
                     type: object
-                    x-kubernetes-map-type: atomic
-                  transferProtocol:
-                    description: The network protocol that the server's update service
-                      uses to retrieve 'ImageURI'
+                  updatePolicy:
+                    description: Policy An indication of whether the server's upgrade
+                      service should bypass vendor update policies
+                    type: string
+                  version:
+                    description: Version contains a BIOS version to upgrade to
                     type: string
                 required:
-                - URI
+                - image
+                - version
                 type: object
               serverMaintenancePolicy:
                 description: ServerMaintenancePolicy is a maintenance policy to be
@@ -142,17 +157,8 @@ spec:
                     type: object
                 type: object
                 x-kubernetes-map-type: atomic
-              updatePolicy:
-                description: Policy An indication of whether the server's upgrade
-                  service should bypass vendor update policies
-                type: string
-              version:
-                description: Version contains a BIOS version to upgrade to
-                type: string
             required:
-            - image
             - serverSelector
-            - version
             type: object
           status:
             description: BIOSVersionSetStatus defines the observed state of BIOSVersionSet.
