--- a/config/crd/bases/metal.ironcore.dev_biosversionsets.yaml
+++ b/config/crd/bases/metal.ironcore.dev_biosversionsets.yaml
@@ -144,8 +144,8 @@ spec:
                     type: object
                     x-kubernetes-map-type: atomic
                   updatePolicy:
-                    description: Policy An indication of whether the server's upgrade
-                      service should bypass vendor update policies
+                    description: UpdatePolicy An indication of whether the server's
+                      upgrade service should bypass vendor update policies
                     type: string
                   version:
                     description: Version contains a BIOS version to upgrade to
@@ -207,32 +207,33 @@ spec:
           status:
             description: BIOSVersionSetStatus defines the observed state of BIOSVersionSet.
             properties:
+              availableBIOSVersion:
+                description: AvailableBIOSVersion is the number of BIOSVersion current
+                  created by the set.
+                format: int32
+                type: integer
               completed:
-                description: Completed is the total number of completed server in
-                  the set.
+                description: CompletedBIOSVersion is the total number of completed
+                  BIOSVersion in the set.
                 format: int32
                 type: integer
               failed:
-                description: Failed is the total number of failed server in the set.
+                description: FailedBIOSVersion is the total number of failed BIOSVersion
+                  in the set.
+                format: int32
+                type: integer
+              fullyLabeledServers:
+                description: fullyLabeledServers is the number of server in the set.
                 format: int32
                 type: integer
               inProgress:
-                description: InMaintenance is the total number of server in the set
-                  that are currently in InProgress.
+                description: InProgressBIOSVersion is the total number of BIOSVersion
+                  in the set that are currently in InProgress.
                 format: int32
                 type: integer
               pending:
-                description: Pending is the total number of pending server in the
-                  set.
-                format: int32
-                type: integer
-              totalServers:
-                description: TotalServers is the number of server in the set.
-                format: int32
-                type: integer
-              totalVersionResource:
-                description: TotalVersionResource is the number of Settings current
-                  created by the set.
+                description: PendingBIOSVersion is the total number of pending BIOSVersion
+                  in the set.
                 format: int32
                 type: integer
             type: object
