Add `BIOSVersionSet` resource and controller (#384)
* Add BIOSVersionSet resource and controller

* revert changes to main.go path

* Fix unit test

* reconcile when server is deleted or created

* Review comments

* Update the reconcileByServer logic

* inline common fields

* Review comments

* remove biosVersion manually as unit test do not delete it

* update unit test to check for owner refs

* update status even when no servers found

* fix deletion logic

* handle deleted label

* Change the inline to template

* some more review comments

* Add concept docs for the resource

* Update APIs

* Improve print labels

* change the name to BIOSVersionTemplate

--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -11,4 +11,5 @@ resources:
 - metal_v1alpha1_biosversion.yaml
 - metal_v1alpha1_bmcsettings.yaml
 - metal_v1alpha1_bmcversion.yaml
+- metal_v1alpha1_biosversionset.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
