Changes related to PR 403

--- a/config/crd/bases/metal.ironcore.dev_biossettings.yaml
+++ b/config/crd/bases/metal.ironcore.dev_biossettings.yaml
@@ -130,6 +130,29 @@ spec:
                 description: 'SettingsMap contains software (eg: BIOS, BMC) settings
                   as map'
                 type: object
+              settingsFlow:
+                description: 'SettingsMap contains software (eg: BIOS, BMC) settings
+                  as map'
+                items:
+                  properties:
+                    priority:
+                      description: |-
+                        Priority defines the order of applying the settings
+                        any int greater than 0. lower number have higher Priority (ie; lower number is applied first)
+                      format: int32
+                      maximum: 2147483645
+                      minimum: 1
+                      type: integer
+                    settings:
+                      additionalProperties:
+                        type: string
+                      description: 'SettingsMap contains software (eg: BIOS, BMC)
+                        settings as map'
+                      type: object
+                  required:
+                  - priority
+                  type: object
+                type: array
               version:
                 description: 'Version contains software (eg: BIOS, BMC) version this
                   settings applies to'
