--- a/config/crd/bases/metal.ironcore.dev_biossettingssets.yaml
+++ b/config/crd/bases/metal.ironcore.dev_biossettingssets.yaml
@@ -64,10 +64,94 @@ spec:
           spec:
             description: BIOSSettingsSetSpec defines the desired state of BIOSSettingsSet.
             properties:
-              serverMaintenancePolicy:
-                description: ServerMaintenancePolicy is maintenance policy to be enforced
-                  on the server.
-                type: string
+              biosVersionTemplate:
+                description: BiosSettingsTemplate defines the template for the BIOSSettings
+                  Resource to be applied to the servers.
+                properties:
+                  serverMaintenancePolicy:
+                    description: ServerMaintenancePolicy is a maintenance policy to
+                      be enforced on the server.
+                    type: string
+                  serverMaintenanceRef:
+                    description: ServerMaintenanceRef is a reference to a ServerMaintenance
+                      object that BiosSetting has requested for the referred server.
+                    properties:
+                      apiVersion:
+                        description: API version of the referent.
+                        type: string
+                      fieldPath:
+                        description: |-
+                          If referring to a piece of an object instead of an entire object, this string
+                          should contain a valid JSON/Go field access statement, such as desiredState.manifest.containers[2].
+                          For example, if the object reference is to a container within a pod, this would take on a value like:
+                          "spec.containers{name}" (where "name" refers to the name of the container that triggered
+                          the event) or if no container name is specified "spec.containers[2]" (container with
+                          index 2 in this pod). This syntax is chosen only to have some well-defined way of
+                          referencing a part of an object.
+                        type: string
+                      kind:
+                        description: |-
+                          Kind of the referent.
+                          More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
+                        type: string
+                      name:
+                        description: |-
+                          Name of the referent.
+                          More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+                        type: string
+                      namespace:
+                        description: |-
+                          Namespace of the referent.
+                          More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/
+                        type: string
+                      resourceVersion:
+                        description: |-
+                          Specific resourceVersion to which this reference is made, if any.
+                          More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency
+                        type: string
+                      uid:
+                        description: |-
+                          UID of the referent.
+                          More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids
+                        type: string
+                    type: object
+                    x-kubernetes-map-type: atomic
+                  settings:
+                    additionalProperties:
+                      type: string
+                    description: 'SettingsMap contains software (eg: BIOS, BMC) settings
+                      as map'
+                    type: object
+                  settingsFlow:
+                    description: 'SettingsMap contains software (eg: BIOS, BMC) settings
+                      as map'
+                    items:
+                      properties:
+                        priority:
+                          description: |-
+                            Priority defines the order of applying the settings
+                            any int greater than 0. lower number have higher Priority (ie; lower number is applied first)
+                          format: int32
+                          maximum: 2147483645
+                          minimum: 1
+                          type: integer
+                        settings:
+                          additionalProperties:
+                            type: string
+                          description: 'SettingsMap contains software (eg: BIOS, BMC)
+                            settings as map'
+                          type: object
+                      required:
+                      - priority
+                      type: object
+                    type: array
+                  version:
+                    description: 'Version contains software (eg: BIOS, BMC) version
+                      this settings applies to'
+                    type: string
+                required:
+                - version
+                type: object
               serverSelector:
                 description: ServerSelector specifies a label selector to identify
                   the servers that are to be selected.
@@ -118,39 +202,8 @@ spec:
                 x-kubernetes-validations:
                 - message: ServerSelector is immutable
                   rule: self == oldSelf
-              settingsFlow:
-                description: |-
-                  SettingsFlow contains BIOS settings sequence to apply on the BIOS in given order
-                  if the settingsFlow length is 1, BIOSSettings resource is created.
-                  if the length is more than 1, BIOSSettingsFlow resource is created.
-                items:
-                  description: 'todo: remove this when we #351 merge'
-                  properties:
-                    priority:
-                      description: |-
-                        Priority defines the order of applying the settings
-                        any int greater than 0. lower number have higher Priority (ie; lower number is applied first)
-                      format: int32
-                      type: integer
-                    settings:
-                      additionalProperties:
-                        type: string
-                      type: object
-                  required:
-                  - priority
-                  type: object
-                type: array
-                x-kubernetes-validations:
-                - message: SettingsFlow is immutable
-                  rule: self == oldSelf
-              version:
-                description: |-
-                  todo: merge this into common structure when we #351 merged
-                  Version contains software (eg: BIOS, BMC) version this settings applies to
-                type: string
             required:
             - serverSelector
-            - version
             type: object
           status:
             description: BIOSSettingsSetStatus defines the observed state of BIOSSettingsSet.
