--- a/config/crd/bases/metal.ironcore.dev_servers.yaml
+++ b/config/crd/bases/metal.ironcore.dev_servers.yaml
@@ -270,6 +270,10 @@ spec:
                 x-kubernetes-map-type: atomic
               power:
                 description: Power specifies the desired power state of the server.
+                enum:
+                - "On"
+                - "Off"
+                - Unmanaged
                 type: string
               serverClaimRef:
                 description: |-
@@ -475,6 +479,13 @@ spec:
               powerState:
                 description: PowerState represents the current power state of the
                   server.
+                enum:
+                - "On"
+                - "Off"
+                - Paused
+                - PoweringOn
+                - PoweringOff
+                - Unmanaged
                 type: string
               processors:
                 description: Processors is a list of Processors associated with the
