Fix duplication finding logic

--- a/config/crd/bases/metal.ironcore.dev_biossettings.yaml
+++ b/config/crd/bases/metal.ironcore.dev_biossettings.yaml
@@ -143,6 +143,8 @@ spec:
                     settings:
                       additionalProperties:
                         type: string
+                      description: 'SettingsMap contains software (eg: BIOS, BMC)
+                        settings as map'
                       type: object
                   required:
                   - priority
