test run attempt #1

--- a/config/crd/bases/metal.ironcore.dev_servermaintenances.yaml
+++ b/config/crd/bases/metal.ironcore.dev_servermaintenances.yaml
@@ -119,6 +119,13 @@ spec:
               serverPower:
                 description: ServerPower specifies the power state of the server during
                   maintenance.
+                enum:
+                - "On"
+                - "Off"
+                - Paused
+                - PoweringOn
+                - PoweringOff
+                - Unmanaged
                 type: string
               serverRef:
                 description: ServerRef is a reference to the server that is to be
