--- a/config/rbac/kustomization.yaml
+++ b/config/rbac/kustomization.yaml
@@ -22,6 +22,9 @@ resources:
 # default, aiding admins in cluster management. Those roles are
 # not used by the {{ .ProjectName }} itself. You can comment the following lines
 # if you do not want those helpers be installed with your Project.
+- bmcversionset_admin_role.yaml
+- bmcversionset_editor_role.yaml
+- bmcversionset_viewer_role.yaml
 - biosversionset_admin_role.yaml
 - biosversionset_editor_role.yaml
 - biosversionset_viewer_role.yaml
