Cleanup BMC clients, add proper logging to registry and probe agent

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -30,6 +30,10 @@ linters:
           - dupl
           - lll
         path: internal/*
+      - linters:
+          - dupl
+          - lll
+        path: bmc/*
     paths:
       - third_party$
       - builtin$
