--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -32,7 +32,9 @@ rules:
   - metal.ironcore.dev
   resources:
   - biossettings
+  - biosversion
   - biosversions
+  - biosversionsets
   - bmcs
   - bmcsecrets
   - bmcsettings
@@ -56,6 +58,7 @@ rules:
   resources:
   - biossettings/finalizers
   - biosversions/finalizers
+  - biosversionsets/finalizers
   - bmcs/finalizers
   - bmcsecrets/finalizers
   - bmcsettings/finalizers
@@ -72,6 +75,7 @@ rules:
   resources:
   - biossettings/status
   - biosversions/status
+  - biosversionsets/status
   - bmcs/status
   - bmcsecrets/status
   - bmcsettings/status
