Fix RBAC for `BIOSVersionSet` (#414)
* Fix RBAC for `BIOSVersionSet`

* Add missing RBAC rules for Server

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -33,6 +33,7 @@ rules:
   resources:
   - biossettings
   - biosversions
+  - biosversionsets
   - bmcs
   - bmcsecrets
   - bmcsettings
@@ -56,6 +57,7 @@ rules:
   resources:
   - biossettings/finalizers
   - biosversions/finalizers
+  - biosversionsets/finalizers
   - bmcs/finalizers
   - bmcsecrets/finalizers
   - bmcsettings/finalizers
@@ -72,6 +74,7 @@ rules:
   resources:
   - biossettings/status
   - biosversions/status
+  - biosversionsets/status
   - bmcs/status
   - bmcsecrets/status
   - bmcsettings/status
