Fix updates when maintenace is not yet created

--- a/config/samples/metal_v1alpha1_biossettings.yaml
+++ b/config/samples/metal_v1alpha1_biossettings.yaml
@@ -9,6 +9,9 @@ spec:
   serverRef:
     name: endpoint-sample-system-0
   version: 2.10.2
-  settings:
-    PxeDev1EnDis: Enabled
+  SettingsFlow:
+    - name: abc
+      priority: 10
+      settings:
+        PxeDev1EnDis: Enabled
   serverMaintenancePolicy: OwnerApproval
