--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -37,6 +37,7 @@ rules:
   - bmcsecrets
   - bmcsettings
   - bmcversions
+  - bmcversionsets
   - endpoints
   - serverbootconfigurations
   - serverclaims
@@ -60,6 +61,7 @@ rules:
   - bmcsecrets/finalizers
   - bmcsettings/finalizers
   - bmcversions/finalizers
+  - bmcversionsets/finalizers
   - endpoints/finalizers
   - serverbootconfigurations/finalizers
   - serverclaims/finalizers
@@ -76,6 +78,7 @@ rules:
   - bmcsecrets/status
   - bmcsettings/status
   - bmcversions/status
+  - bmcversionsets/status
   - endpoints/status
   - serverbootconfigurations/status
   - serverclaims/status
