--- a/config/crd/bases/metal.ironcore.dev_bmcversionsets.yaml
+++ b/config/crd/bases/metal.ironcore.dev_bmcversionsets.yaml
@@ -18,7 +18,7 @@ spec:
     - jsonPath: .spec.bmcVersionTemplate.version
       name: BMCVersion
       type: string
-    - jsonPath: .status.fullyLabeledBMCS
+    - jsonPath: .status.fullyLabeledBMCs
       name: selectedServers
       type: integer
     - jsonPath: .status.availableBMCVersion
@@ -236,8 +236,8 @@ spec:
                   in the set.
                 format: int32
                 type: integer
-              fullyLabeledBMCS:
-                description: FullyLabeledBMCS is the number of server in the set.
+              fullyLabeledBMCs:
+                description: FullyLabeledBMCs is the number of server in the set.
                 format: int32
                 type: integer
               inProgressBMCVersion:
