--- a/config/crd/bases/metal.ironcore.dev_bmcversionsets.yaml
+++ b/config/crd/bases/metal.ironcore.dev_bmcversionsets.yaml
@@ -19,7 +19,7 @@ spec:
       name: BMCVersion
       type: string
     - jsonPath: .status.fullyLabeledBMCs
-      name: selectedServers
+      name: selectedBMCs
       type: integer
     - jsonPath: .status.availableBMCVersion
       name: AvailableBMCVersion
