--- a/config/crd/bases/metal.ironcore.dev_biossettingssets.yaml
+++ b/config/crd/bases/metal.ironcore.dev_biossettingssets.yaml
@@ -64,7 +64,7 @@ spec:
           spec:
             description: BIOSSettingsSetSpec defines the desired state of BIOSSettingsSet.
             properties:
-              biosVersionTemplate:
+              biosSettingsTemplate:
                 description: BiosSettingsTemplate defines the template for the BIOSSettings
                   Resource to be applied to the servers.
                 properties:
