--- a/config/crd/bases/metal.ironcore.dev_bmcversions.yaml
+++ b/config/crd/bases/metal.ironcore.dev_bmcversions.yaml
@@ -113,8 +113,8 @@ spec:
                 - URI
                 type: object
               serverMaintenancePolicy:
-                description: ServerMaintenancePolicy is maintenance policy to be enforced
-                  on the server managed by referred BMC.
+                description: ServerMaintenancePolicy is a maintenance policy to be
+                  enforced on the server managed by referred BMC.
                 type: string
               serverMaintenanceRefs:
                 description: ServerMaintenanceRefs are references to a ServerMaintenance
@@ -172,11 +172,11 @@ spec:
                   type: object
                 type: array
               updatePolicy:
-                description: An indication of whether the server's upgrade service
-                  should bypass vendor update policies
+                description: UpdatePolicy is an indication of whether the server's
+                  upgrade service should bypass vendor update policies
                 type: string
               version:
-                description: Version contains BMC version to upgrade to
+                description: Version contains a BMC version to upgrade to
                 type: string
             required:
             - image
