--- a/config/crd/bases/metal.ironcore.dev_biossettingssets.yaml
+++ b/config/crd/bases/metal.ironcore.dev_biossettingssets.yaml
@@ -15,7 +15,7 @@ spec:
   scope: Cluster
   versions:
   - additionalPrinterColumns:
-    - jsonPath: .spec.version
+    - jsonPath: .spec.biosSettingsTemplate.version
       name: BIOSVersion
       type: string
     - jsonPath: .status.fullyLabeledServers
