--- a/config/crd/bases/metal.ironcore.dev_servers.yaml
+++ b/config/crd/bases/metal.ironcore.dev_servers.yaml
@@ -455,10 +455,6 @@ spec:
                 items:
                   description: NetworkInterface defines the details of a network interface.
                   properties:
-                    deviceName:
-                      description: DeviceName is the name of the device associated
-                        with the network interface.
-                      type: string
                     ip:
                       description: |-
                         IP is the IP address assigned to the network interface.
@@ -473,16 +469,16 @@ spec:
                     name:
                       description: Name is the name of the network interface.
                       type: string
+                    pciAddress:
+                      description: PCIAddress is the PCI address of the network interface.
+                      type: string
                     speed:
                       description: Speed is the speed of the network interface
                       type: string
                   required:
-                  - deviceName
                   - ip
                   - macAddress
-                  - model
                   - name
-                  - speed
                   type: object
                 type: array
               powerState:
