--- a/config/crd/bases/metal.ironcore.dev_biossettings.yaml
+++ b/config/crd/bases/metal.ironcore.dev_biossettings.yaml
@@ -145,8 +145,8 @@ spec:
                     settings:
                       additionalProperties:
                         type: string
-                      description: 'SettingsMap contains software (eg: BIOS, BMC)
-                        settings as map'
+                      description: 'Settings contains software (eg: BIOS, BMC) settings
+                        as map'
                       type: object
                   required:
                   - name
