Add ability to set BIOS settings in sequence (#403)
* Add ability to set BIOS settings in sequence

* Move CurrentPriority to status

* Skip patching user provided settings

* Change reason to variables

* stabilize unit testing

* Fix duplication finding logic

* Minor fixes

* Change the status to maintain each status of settings

* Fix updates when maintenace is not yet created

* Update logic to check each state every reconcile

* Fix review comments

* fix a bug

reset the index when the new status is appended to reflect the right index value.

--- a/config/samples/metal_v1alpha1_biossettings.yaml
+++ b/config/samples/metal_v1alpha1_biossettings.yaml
@@ -8,7 +8,10 @@ metadata:
 spec:
   serverRef:
     name: endpoint-sample-system-0
-  version: 2.10.2
-  settings:
-    PxeDev1EnDis: Enabled
+  version: P79 v1.45 (12/06/2017)
+  settingsFlow:
+    - name: abc
+      priority: 10
+      settings:
+        abc: Enabled
   serverMaintenancePolicy: OwnerApproval
