Add  `BIOSSettingsSet` resource and controller (#383)
* Add  resource and controller

* code improvements

* reconcile when server is deleted or created

* improvement based on other PR reviews

* add more unit test

* Changes related to PR 403

* Stabilize unit tests in BIOS

* Add docs, fix role

* fix sample, json tag

* fix printColumn

* fix review comments

* Missed merge conflicts

* Updated logs and comments

--- a/config/rbac/kustomization.yaml
+++ b/config/rbac/kustomization.yaml
@@ -28,6 +28,9 @@ resources:
 - biosversionset_admin_role.yaml
 - biosversionset_editor_role.yaml
 - biosversionset_viewer_role.yaml
+- biossettingsset_admin_role.yaml
+- biossettingsset_editor_role.yaml
+- biossettingsset_viewer_role.yaml
 - biosversion_admin_role.yaml
 - biosversion_editor_role.yaml
 - biosversion_viewer_role.yaml
