--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -13,4 +13,5 @@ resources:
 - metal_v1alpha1_bmcversion.yaml
 - metal_v1alpha1_biosversionset.yaml
 - metal_v1alpha1_bmcversionset.yaml
+- metal_v1alpha1_biossettingsset.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
