--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -15,6 +15,7 @@ resources:
 - bases/metal.ironcore.dev_bmcversions.yaml
 - bases/metal.ironcore.dev_biosversionsets.yaml
 - bases/metal.ironcore.dev_bmcversionsets.yaml
+- bases/metal.ironcore.dev_biossettingssets.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patches:
