--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -32,6 +32,7 @@ rules:
   - metal.ironcore.dev
   resources:
   - biossettings
+  - biossettingssets
   - biosversions
   - biosversionsets
   - bmcs
@@ -57,6 +58,7 @@ rules:
   - metal.ironcore.dev
   resources:
   - biossettings/finalizers
+  - biossettingssets/finalizers
   - biosversions/finalizers
   - biosversionsets/finalizers
   - bmcs/finalizers
@@ -75,6 +77,7 @@ rules:
   - metal.ironcore.dev
   resources:
   - biossettings/status
+  - biossettingssets/status
   - biosversions/status
   - biosversionsets/status
   - bmcs/status
