Fix mock server context handling

--- a/.github/workflows/check-codegen.yml
+++ b/.github/workflows/check-codegen.yml
@@ -14,12 +14,8 @@ jobs:
     - uses: actions/setup-go@v5
       with:
         go-version-file: 'go.mod'
-    - name: Run make generate
-      run: make generate
-    - name: Run make docs
-      run: make docs
-    - name: Run make helm
-      run: make helm
+    - name: Run code gen checks
+      run: make check-gen
     - name: Compare the expected and actual generated/* directories
       run: |
         if [ "$(git diff | wc -l)" -gt "0" ]; then
